--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script   src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>-->
+
   <style>
-   
+    .navbar{
+      margin-bottom: 10px;
+    }
   </style>
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-md ">
+  <nav class="navbar navbar-expand-lg bg-success navbar-dark ">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">UFARM</a>
@@ -26,24 +28,50 @@
         <li class="active"><a href="#">Home</a></li>
         <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Account</a>
           <ul class="dropdown-menu">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
           </ul>
         </li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Payment and Delivery</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="payments.html">Payment and Delivery</a></li>
       </ul>
     </div>
   </nav>
-<div class="container-fluid mt-3">
-  <div class="container">
-    <h3>Welcome to your one stop online food market</h3>
-
+  </div>
+  <!-- Carousel -->
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <!-- Indicators/dots -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    </div>
+    <!-- The slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="image/farmland.jpg" alt="farm" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="image/crops.jpg" alt="crops" class="d-block" style="width:100%">
+      </div>
+      <div class="carousel-item">
+        <img src="image/plants.jpg" alt="plants" class="d-block" style="width:100%">
+      </div>
+    </div>
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
   </div>
   <footer>
     About us <br>
     Contact support
   </footer>
 </body>
+<script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 
 </html>
