--- a/login.html
+++ b/login.html
@@ -6,28 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="site.css">
-    <title>UFARM</title>
+    <title>login</title>
+    <style>
+        .card {
+            background-color: rgb(84, 235, 235);
+        }
+    </style>
 </head>
 
 <body>
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
+                <div class="card header">
+                    <h1>Login Here</h1>
+                </div>
                 <img class="card-img-top" src="image/picture.png" alt="mtn" style="width: 100%;">
                 <div class="card-body">
                     <form action="#" id="loginForm" name="login">
-                       <div class="form row">
-                        <div class="col form-group">
-                            <label>Email</label>
-                            <input class="form-control" type="email" id="mail" name="mail">
-                            <small id="mailErr"></small>
+                        <div class="form row">
+                            <div class="col form-group">
+                                <label>Unique number/id</label>
+                                <input class="form-control" type="number" id="uN" name="unique number">
+                                <small id="uNErr"></small>
+                            </div>
+                            <div class="col form-group">
+                                <label>Password</label>
+                                <input class="form-control" id="pwd" name="password" type="password">
+                                <small id="pwdErr"></small>
+                            </div>                     
                         </div>
-                        <div class="col form-group">
-                            <label>Password</label>
-                            <input class="form-control" id="pwd" name="password" type="password">
-                            <small id="pwdErr"></small>
-                        </div>
-                       </div>
+                        <button id="login" class="btn btn-primary">LOGIN</button>
                     </form>
                 </div>
             </div>
@@ -35,4 +44,5 @@
     </div>
 </body>
 <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+
 </html>
