--- a/register.html
+++ b/register.html
@@ -6,21 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="site.css">
-  <title>UFARM</title>
+  <title>Register</title>
 
   <style>
     .form-group {
       background-color: azure
     }
-    .card{
+
+    .card {
       background-color: azure;
       border-radius: 15cap;
     }
-    .h1{
+
+    .h1 {
       font-family: Arial, Helvetica, sans-serif;
       font-size: xx-small;
     }
-    
   </style>
 
 
@@ -30,13 +31,14 @@
 
 <body>
   <header>
-    <h1>REGISTER HERE</h1>
+    <h3>REGISTER HERE</h3>
+    <h6>Note:This section is only for the agricultural officer </h6>
   </header>
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
         <div class="card-body">
-          <form id="regform" action="#" onsubmit="return validate()" method="post">
+          <form id="regform" action="#" onsubmit="return validate (event)" method="post">
             <div class="form-group">
               <label>First name:</label>
               <input type="text" class="form-control" name="firstname" id="fName">
@@ -66,11 +68,6 @@
               <label>Phone number:</label>
               <input type="text" class="form-control" name="phone number" id="pNum">
               <small id="pNumErr"></small>
-            </div>
-            <div class="form-group">
-              <label for="email">Email address:</label>
-              <input type="email" class="form-control" id="mail" name="email">
-              <small id="mailErr"></small>
             </div>
             <div class="form-group">
               <label>NIN:</label>
@@ -103,9 +100,9 @@
               <small id="drErr"></small>
             </div>
             <div class="form-group">
-              <label>FO number:</label>
-              <input type="number" class="form-control" name="fo number" id="foNum">
-              <small id="foNumErr"></small>
+              <label>Unique number:</label>
+              <input type="number" class="form-control" name="unique number" id="uN">
+              <small id="uNErr"></small>
             </div>
             <div class="form-group">
               <label for="pwd">Password:</label>
@@ -115,16 +112,20 @@
             <div class="checkbox">
               <label><input type="checkbox"> Remember me</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button id="submit"  class="btn btn-primary btn-block">Submit</button>
           </form>
         </div>
       </div>
-     </div> 
     </div>
-    <footer>
-  Ufarm.ug
-    </footer>
+  </div>
+  <footer>
+    <div class="row justify-content-center"></div>
+    Ufarm.ug
+  </footer>
 </body>
+<script src="bootstrap/js/bootstrap.js"></script>
+<script src="validate.js"></script>
 
 </html>
-<script src="bootstrap/js/bootstrap.js"></script>
+<!--<script src="bootstrap/js/bootstrap.js"></script>
+<script src="validate.js"></script>
