--- a/products.html
+++ b/products.html
@@ -4,9 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
   <title>Products</title>
 </head>
 <body>
-  
+  <div class="container mt-3">
+    <h2>Nav</h2>
+    <p>Basic horizontal menu:</p>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">diary</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+  <script src="bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
