--- a/register.html
+++ b/register.html
@@ -75,13 +75,13 @@
               <small id="ninErr"></small>
             </div>
             <div class="form-group">
-              <label>location:</label>
-              <input type="text" class="form-control" name="location" id="loc">
-              <small id="locErr"></small>
+              <label>Address</label>
+              <input type="text" class="form-control" name="address" id="adr">
+              <small id="adrErr"></small>
             </div>
             <div class="form-group">
-              <label>Time spent in the area:</label>
-              <input type="text" class="form-control" name="time" id="tsa">
+              <label>Years spent in the area:</label>
+              <input type="number" class="form-control" name="time" id="tsa">
               <small id="tsaErr"></small>
             </div>
             <div class="form-group">
