--- a/auth/register.html
+++ b/auth/register.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="site.css">
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
   <title>Register</title>
 
   <style>
@@ -30,6 +30,9 @@
 </head>
 
 <body>
+    <!-- nav starts Here -->
+
+    <!-- nav bar ends here -->
   <header>
     <h3>REGISTER HERE</h3>
     <h6>Note:This section is only for the agricultural officer </h6>
@@ -123,8 +126,8 @@
     Ufarm.ug
   </footer>
 </body>
-<script src="bootstrap/js/bootstrap.js"></script>
-<script src="validate.js"></script>
+<script src="/bootstrap/js/bootstrap.js"></script>
+<script src="/validate.js"></script>
 
 </html>
 <!--<script src="bootstrap/js/bootstrap.js"></script>
