--- a/auth/farmerone.html
+++ b/auth/farmerone.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="site.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+    <title>farmer one</title>
 </head>
 <body>
+    <!-- nav starts Here -->
+
+    <!-- nav bar ends here -->
     <div class="row justify-content-center">
         <div class="col-md-6">
           <div class="card">
@@ -49,9 +52,9 @@
                   <small id="ninErr"></small>
                 </div>
                 <div class="form-group">
-                  <label>Ward name:</label>
-                  <input type="text" class="form-control" name="ward name" id="wdN">
-                  <small id="wdNErr"></small>
+                  <label>Ward:</label>
+                  <input type="text" class="form-control" name="ward name" id="wd">
+                  <small id="wdErr"></small>
                 </div>
                 <div class="form-group">
                   <label>Activities carried out:</label>
@@ -83,6 +86,6 @@
         </div>
       </div>
 </body>
-<script src="bootstrap/js/bootstrap.js"></script>
-<script src="validate.js"></script>
+<script src="/bootstrap/js/bootstrap.js"></script>
+<script src="/validate.js"></script>
 </html>
