--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <title>UFARM</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
+ <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
    
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+  <!-- nav starts Here -->
+
+    <!-- nav bar ends here -->
   <nav class="navbar navbar-expand-lg bg-success navbar-dark ">
     <div class="container-fluid">
       <div class="navbar-header">
