--- a/auth/farmerone.html
+++ b/auth/farmerone.html
@@ -87,5 +87,5 @@
       </div>
 </body>
 <script src="/bootstrap/js/bootstrap.js"></script>
-<script src="/validate.js"></script>
+<script src="/farmer.one.js"></script>
 </html>
