CORRECTION OF VALIDATE.JS FOR REGISTER

--- a/products/product.html
+++ b/products/product.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- nav starts Here -->
-    <div w3-include-html="navbar.html"></div>
+    <div w3-include-html="/includes/navbar.html"></div>
     <!-- nav bar ends here -->
   <div class="container mt-3">
     <h2>Nav</h2>
@@ -89,7 +89,7 @@
     </div>
   </div>
   <script src="/bootstrap/js/bootstrap.bundle.js"></script>
-  <script src="/includes/custom.js"></script>
-  <script src="includeHTML();"></script>
+ <script src="/includes/custom.js"></script>
+  
 </body>
 </html>
