--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -127,7 +127,7 @@
   </footer>
 </body>
 <script src="/bootstrap/js/bootstrap.js"></script>
-<script src="/validate.js"></script>
+<script src="/js/fOnevalidate.js"></script>
 
 </html>
 <!--<script src="bootstrap/js/bootstrap.js"></script>
