--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -87,5 +87,5 @@
       </div>
 </body>
 <script src="/bootstrap/js/bootstrap.js"></script>
-<script src="/farmer.one.js"></script>
+<script src="/js/uFarmerValidate.js"></script>
 </html>
