--- a/auth/login.html
+++ b/auth/login.html
@@ -26,7 +26,7 @@
                 </div>
                 <img class="card-img-top" src="/image/picture.png" alt="mtn" style="width: 100%;">
                 <div class="card-body">
-                    <form action="#" id="loginForm" name="login" method="post">
+                    <form action="#" id="loginForm" name="login" onsubmit="validate(event)" method="post">
                         <div class="form row">
                             <div class="col form-group">
                                 <label>Unique number/id</label>
