--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -83,6 +83,11 @@
               <small id="adrErr"></small>
             </div>
             <div class="form-group">
+              <label>Residence type:</label>
+              <input type="text" class="form-control" name="residence type" id="rT">
+              <small id="rTErr"></small>
+            </div>
+            <div class="form-group">
               <label>Years spent in the area:</label>
               <input type="number" class="form-control" name="time" id="tsa">
               <small id="tsaErr"></small>
