ADDITION OF UPLOADS VALIDATION AND NAVBAR TO DIFFERENT PAGES

--- a/auth/login.html
+++ b/auth/login.html
@@ -16,7 +16,7 @@
 
 <body>
 <!-- nav starts Here -->
-
+<div w3-include-html="/includes/navbar.html"></div>
     <!-- nav bar ends here -->
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -47,5 +47,6 @@
         </div>        
     </div>
     <script src="/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="/includes/custom.js"></script>
 </body>
 </html>
