--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- nav starts Here -->
-
+    <div w3-include-html="/includes/navbar.html"></div>
     <!-- nav bar ends here -->
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -88,4 +88,5 @@
 </body>
 <script src="/bootstrap/js/bootstrap.js"></script>
 <script src="/js/uFarmerValidate.js"></script>
+<script src="/includes/custom.js"></script>
 </html>
