--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -31,7 +31,7 @@
 
 <body>
     <!-- nav starts Here -->
-
+    <div w3-include-html="/includes/navbar.html"></div>
     <!-- nav bar ends here -->
   <header>
     <h3>REGISTER HERE</h3>
@@ -133,6 +133,7 @@
 </body>
 <script src="/bootstrap/js/bootstrap.js"></script>
 <script src="/js/fOnevalidate.js"></script>
+<script src="/includes/custom.js"></script>
 
 </html>
 <!--<script src="bootstrap/js/bootstrap.js"></script>
