ADDITION OF FOOTER TAG TO PAGES

--- a/auth/login.html
+++ b/auth/login.html
@@ -46,6 +46,9 @@
             <h4>If you dont have an account <a href="">register here</a></h4>
         </div>        
     </div>
+    <!-- footer starts here -->
+    <div w3-include-html="/includes/footer.html"></div>
+    <!-- footer ends here -->
     <script src="/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="/includes/custom.js"></script>
 </body>
