--- a/products/product.html
+++ b/products/product.html
@@ -88,6 +88,10 @@
       </div>
     </div>
   </div>
+<!-- footer starts here -->
+<div w3-include-html="/includes/footer.html"></div>
+<!-- footer ends here -->
+
   <script src="/bootstrap/js/bootstrap.bundle.js"></script>
  <script src="/includes/custom.js"></script>
   
