--- a/products/upload.html
+++ b/products/upload.html
@@ -100,6 +100,9 @@
             </div>
         </div>
     </div>
+    <!-- footer starts here -->
+    <div w3-include-html="/includes/footer.html"></div>
+    <!-- footer ends here -->
     <script src="/bootstrap/js/bootstrap.js"></script>
     <script src="/js/uploadValidate.js"></script>
     <script src="/includes/custom.js"></script>
