--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -30,9 +30,9 @@
 </head>
 
 <body>
-    <!-- nav starts Here -->
-    <div w3-include-html="/includes/navbar.html"></div>
-    <!-- nav bar ends here -->
+  <!-- nav starts Here -->
+  <div w3-include-html="/includes/navbar.html"></div>
+  <!-- nav bar ends here -->
   <header>
     <h3>REGISTER HERE</h3>
     <h6>Note:This section is only for the agricultural officer </h6>
@@ -120,7 +120,7 @@
             <div class="checkbox">
               <label><input type="checkbox"> Remember me</label>
             </div>
-            <button id="submit"  class="btn btn-primary btn-block">Submit</button>
+            <button id="submit" class="btn btn-primary btn-block">Submit</button>
           </form>
         </div>
       </div>
@@ -130,10 +130,14 @@
     <div class="row justify-content-center"></div>
     Ufarm.ug
   </footer>
+  <!-- footer starts here -->
+  <div w3-include-html="/includes/footer.html"></div>
+  <!-- footer ends here -->
+  <script src="/bootstrap/js/bootstrap.js"></script>
+  <script src="/js/fOnevalidate.js"></script>
+  <script src="/includes/custom.js"></script>
+
 </body>
-<script src="/bootstrap/js/bootstrap.js"></script>
-<script src="/js/fOnevalidate.js"></script>
-<script src="/includes/custom.js"></script>
 
 </html>
 <!--<script src="bootstrap/js/bootstrap.js"></script>
