--- a/home.html
+++ b/home.html
@@ -74,6 +74,9 @@
     About us <br>
     Contact support
   </footer>
+  <!-- footer starts here -->
+  <div w3-include-html="/includes/footer.html"></div>
+  <!-- footer ends here -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/bootstrap/js/bootstrap.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.js"></script>
