change to secondname validation

--- a/auth/login.html
+++ b/auth/login.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" />
     <title>login</title>
     <style>
         .card {
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-<!-- nav starts Here -->
-<div w3-include-html="/includes/navbar.html"></div>
+    <!-- nav starts Here -->
+    <div w3-include-html="/includes/navbar.html"></div>
     <!-- nav bar ends here -->
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -24,27 +24,27 @@
                 <div class="card header">
                     <h1>Login Here</h1>
                 </div>
-                <img class="card-img-top" src="/image/picture.png" alt="mtn" style="width: 100%;">
+                <img class="card-img-top" src="/image/picture.png" alt="mtn" style="width: 100%" />
                 <div class="card-body">
                     <form action="#" id="loginForm" name="login" onsubmit="validate(event)" method="post">
                         <div class="form row">
                             <div class="col form-group">
                                 <label>Unique number/id</label>
-                                <input class="form-control" type="number" id="uN" name="unique number">
+                                <input class="form-control" type="number" id="uN" name="unique number" />
                                 <small id="uNErr"></small>
                             </div>
                             <div class="col form-group mb-3">
                                 <label>Password</label>
-                                <input class="form-control" id="pwd" name="password" type="password">
+                                <input class="form-control" id="pwd" name="password" type="password" />
                                 <small id="pwdErr"></small>
-                            </div>                     
+                            </div>
                         </div>
                         <button id="login" class="btn btn-primary">LOGIN</button>
                     </form>
                 </div>
             </div>
             <h4>If you dont have an account <a href="">register here</a></h4>
-        </div>        
+        </div>
     </div>
     <!-- footer starts here -->
     <div w3-include-html="/includes/footer.html"></div>
@@ -52,4 +52,5 @@
     <script src="/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="/includes/custom.js"></script>
 </body>
+
 </html>
