--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -1,98 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" />
+    <title>farmer one</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
-  <title>farmer one</title>
-</head>
-
-<body>
-  <!-- nav starts Here -->
-  <div w3-include-html="/includes/navbar.html"></div>
-  <!-- nav bar ends here -->
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card">
-        <div class="card-body">
-          <form id="regform" action="#" onsubmit="return validate (event)" method="post">
-            <div class="form-group">
-              <label>First name:</label>
-              <input type="text" class="form-control" name="firstname" id="fName">
-              <small id="fNameErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Second name:</label>
-              <input type="text" class="form-control" name="secondname" id="sName">
-              <small id="sNameErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Date of birth:</label>
-              <input type="date" class="form-control" name="dob" id="db">
-              <small id="dbErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Gender:</label>
-              <label class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="male"><span>Male</span>
-              </label>
-              <label class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" id="female"><span>Female</span>
-              </label>
-              <small id="gndErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Phone number:</label>
-              <input type="text" class="form-control" name="phone number" id="pNum">
-              <small id="pNumErr"></small>
-            </div>
-            <div class="form-group">
-              <label>NIN:</label>
-              <input type="number" class="form-control" name="NIN" id="nin">
-              <small id="ninErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Ward:</label>
-              <input type="text" class="form-control" name="ward name" id="wd">
-              <small id="wdErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Activities carried out:</label>
-              <input type="text" class="form-control" name="activites" id="act">
-              <small id="actErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Date of registration:</label>
-              <input type="date" class="form-control" name="dreg" id="dr">
-              <small id="drErr"></small>
-            </div>
-            <div class="form-group">
-              <label>Unique id:</label>
-              <input type="number" class="form-control" name="unique id" id="uI">
-              <small id="uIErr"></small>
-            </div>
-            <div class="form-group">
-              <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="pwd" name="password">
-              <small id="pwdErr"></small>
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox"> Remember me</label>
-            </div>
-            <button id="submit" class="btn btn-primary btn-block">Submit</button>
-          </form>
+  <body>
+    <!-- nav starts Here -->
+    <div w3-include-html="/includes/navbar.html"></div>
+    <!-- nav bar ends here -->
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <form
+              id="regform"
+              action="#"
+              onsubmit="return validate (event)"
+              method="post"
+            >
+              <div class="form-group">
+                <label>First name:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="firstname"
+                  id="fName"
+                />
+                <small id="fNameErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Second name:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="secondname"
+                  id="sName"
+                />
+                <small id="sNameErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Date of birth:</label>
+                <input type="date" class="form-control" name="dob" id="db" />
+                <small id="dbErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Gender:</label>
+                <label class="form-check form-check-inline">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="gender"
+                    id="male"
+                  /><span>Male</span>
+                </label>
+                <label class="form-check form-check-inline">
+                  <input
+                    class="form-check-input"
+                    type="radio"
+                    name="gender"
+                    id="female"
+                  /><span>Female</span>
+                </label>
+                <small id="gndErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Phone number:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="phone number"
+                  id="pNum"
+                />
+                <small id="pNumErr"></small>
+              </div>
+              <div class="form-group">
+                <label>NIN:</label>
+                <input type="number" class="form-control" name="NIN" id="nin" />
+                <small id="ninErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Ward:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="ward name"
+                  id="wd"
+                />
+                <small id="wdErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Activities carried out:</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="activites"
+                  id="act"
+                />
+                <small id="actErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Date of registration:</label>
+                <input type="date" class="form-control" name="dreg" id="dr" />
+                <small id="drErr"></small>
+              </div>
+              <div class="form-group">
+                <label>Unique id:</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  name="unique id"
+                  id="uI"
+                />
+                <small id="uIErr"></small>
+              </div>
+              <div class="form-group">
+                <label for="pwd">Password:</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="pwd"
+                  name="password"
+                />
+                <small id="pwdErr"></small>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" /> Remember me</label>
+              </div>
+              <button id="submit" class="btn btn-primary btn-block">
+                Submit
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- footer starts here -->
-  <div w3-include-html="/includes/footer.html"></div>
-  <!-- footer ends here -->
-  <script src="/bootstrap/js/bootstrap.js"></script>
-  <script src="/js/uFarmerValidate.js"></script>
-  <script src="/includes/custom.js"></script>
-</body>
-
+    <!-- footer starts here -->
+    <div w3-include-html="/includes/footer.html"></div>
+    <!-- footer ends here -->
+    <script src="/bootstrap/js/bootstrap.js"></script>
+    <script src="/js/uFarmerValidate.js"></script>
+    <script src="/includes/custom.js"></script>
+  </body>
 </html>
