--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -74,7 +74,7 @@
             </div>
             <div class="form-group">
               <label>NIN:</label>
-              <input type="number" class="form-control" name="NIN" id="nin">
+              <input type="text" class="form-control" name="NIN" id="nin">
               <small id="ninErr"></small>
             </div>
             <div class="form-group">
