--- a/products/product.html
+++ b/products/product.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <style>
     .nav {
       content: justify center;
@@ -25,7 +26,9 @@
       <div class="row">
         <div class="col">
           <div class="card">
-            div
+            <div class="card-body">
+              di
+            </div>
           </div>
         </div>
         <div class="col">
