cart and product page

--- a/products/cart.html
+++ b/products/cart.html
@@ -22,14 +22,22 @@
     <!-- nav bar ends here -->
 
     <div class="container-fluid">
-        <div class="row justify-content-center">
-
+        <div class="row">
+            <div class="col-8">
+                <article class="card">
+                    <header>CART</header>
+                    
+                </article>
+            </div>
+            <div class="col-4">
+                <article class="card">
+                    <h6>CART SUMMARY</h6>
+                    <div class="total">total</div>
+                </article>
+            </div>
         </div>
     </div>
-    </form>
-    </div>
-    </div>
-    </div>
+    
     <!-- footer starts here -->
     <div w3-include-html="/includes/footer.html"></div>
     <!-- footer ends here -->
