--- a/products/product.html
+++ b/products/product.html
@@ -24,29 +24,24 @@
 
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-3">
           <div class="card">
             <div class="card-body">
               di
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-3">
           <div class="card">
 
           </div>
         </div>
-        <div class="col">
+        <div class="col-3">
           <div class="card">
 
           </div>
         </div>
-        <div class="col">
-          <div class="card">
-
-          </div>
-        </div>
-        <div class="col">
+        <div class="col-3">
           <div class="card">
 
           </div>
