addition of products

--- a/products/product.html
+++ b/products/product.html
@@ -11,6 +11,14 @@
     .nav {
       content: justify center;
     }
+
+    .row {
+      padding-bottom: 30px;
+    }
+    button{
+       background-color: rgb(66, 66, 177);
+       
+    }
   </style>
   <title>Products</title>
 </head>
@@ -19,31 +27,152 @@
   <!-- nav starts Here -->
   <div w3-include-html="/includes/navbar.html"></div>
   <!-- nav bar ends here -->
-  <div class="container mt-3">
+  <div class="container-fluid mt-3">
 
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
+        <h4>Diary products</h4>
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              di
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card">
-
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card">
-
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card">
-
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <h4>Horticulture products</h4>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button"class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button"class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <h4>Poultry</h4>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="" alt="flowers">
+              <p class="card text">Flowers <br>
+                UGX 5000 @bouquet
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+            </div>
           </div>
         </div>
       </div>
