--- a/home.html
+++ b/home.html
@@ -10,38 +10,16 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
    
   <style>
-    ul li{
-      padding: 20px;
-    }
-    li a{
-      color: rgb(114, 8, 8)
-    }
+    
+   
   </style>
 </head>
 
 <body>
   <!-- nav starts Here -->
-
+  <div w3-include-html="/includes/navbar.html"></div>
     <!-- nav bar ends here -->
-  <nav class="navbar navbar-expand-lg bg-success navbar-dark ">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">UFARM</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="nav-item dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Account</a>
-          <ul class="dropdown-menu">
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-          </ul>
-        </li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="payments.html">Payment and Delivery</a></li>
-      </ul>
-    </div>
-  </nav>
-  </div>
+  
   <!-- Carousel -->
   <div id="demo" class="carousel slide" data-bs-ride="carousel">
     <!-- Indicators/dots -->
@@ -54,12 +32,24 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="image/farmland.jpg" alt="farm" class="d-block" style="width:100%">
+        <div class="carousel-caption">
+          <h3>WELCOME TO UFARM</h3>
+          <p>Your one stop online food market</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img src="image/crops.jpg" alt="crops" class="d-block" style="width:100%">
+        <div class="carousel-caption">
+          <h3>WELCOME TO UFARM</h3>
+          <p>Your one stop online food market</p>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="image/plants.jpg" alt="plants" class="d-block" style="width:100%">
+        <img src="image/browse.jpg" alt="plants" class="d-block" style="width:100%">
+        <div class="carousel-caption">
+          <h3>WELCOME TO UFARM</h3>
+          <p>Your one stop online food market</p>
+        </div>
       </div>
     </div>
     <!-- Left and right controls/icons -->
@@ -70,16 +60,14 @@
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
-  <footer>
-    About us <br>
-    Contact support
-  </footer>
+  <p>Click here to begin <a href="/auth/login.html">shopping</a></p>
   <!-- footer starts here -->
   <div w3-include-html="/includes/footer.html"></div>
   <!-- footer ends here -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/bootstrap/js/bootstrap.js"></script>
   <script src="/bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="/includes/custom.js"></script>
 </body>
 
 
