FIXED THE ISSUE OF BACKGROUND IMAGE

--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -32,9 +32,8 @@
       /* The image used */
       background-color: #cccccc;
       /* Used if the image is unavailable */
-      height: 1000px;
       /* You must set a specified height */
-      background-position: center;
+      background-position: relative;
       /* Center the image */
       background-repeat: no-repeat;
       /* Do not repeat the image */
