changes to cart body

--- a/products/cart.html
+++ b/products/cart.html
@@ -15,6 +15,14 @@
             text-align: center;
             margin-top: 10px;
         }
+        .summary{
+            margin-bottom: 200px;
+        }
+        article{
+            border-style:groove;
+            border-radius: 10px;
+            background-color: whitesmoke;
+        }
     </style>
 </head>
 
@@ -27,17 +35,32 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-8">
-                <article class="card">
-                    <header>CART</header>
-
+                <article class="">
+                    <header>
+                        <h4>Cart</h4>
+                    </header>
+                    <div class="row">
+                        <div class="col 4">
+                            image
+                        </div>
+                        <div class="col 4">
+                            name
+                        </div>
+                        <div class="col 4">
+                            quantity
+                        </div>
+                        <div class="col 4">
+                            price
+                        </div>
+                    </div>
                 </article>
             </div>
             <div class="col-4">
-                <article class="card">
-                    <h6>CART SUMMARY</h6>
+                <article class=" summary">
+                    <h4>Cart summary</h4>
                     <form action="#" method="post" class="form-inline">
                         <label>Total:</label>
-                        <input class="form-control" type="text" id="total" name="total" placeholder="UGX 0000"/>
+                        <input class="form-control" type="text" id="total" name="total" placeholder="UGX 0000" />
                         <small id="tlErr"></small>
                         <div class="checkbutton">
                             <button id="checkout" class="btn btn-success">CHECKOUT</button>
