CHANGES TO DESIGN OF FORMS AND VALIDATION and addition of AO form

--- a/auth/registerFone.html
+++ b/auth/registerFone.html
@@ -10,23 +10,19 @@
   <title>RegisterFO</title>
 
   <style>
-    .form-group {
+    form{
       background-color: azure;
     }
 
     .card {
       border-radius: 130px;
+      margin-bottom: 20px;
     }
 
     .h1 {
       font-family: Arial, Helvetica, sans-serif;
       font-size: xx-small;
     }
-
-    .body {
-      background-color: blue;
-    }
-
     .image {
       background-image: url("/image/farmland.jpg");
       /* The image used */
@@ -41,6 +37,11 @@
       /* Resize the background image to cover the entire container */
       background-attachment: fixed;
     }
+    header{
+      text-align: center ;
+      font-style: italic;
+      padding-top: 10px;
+    }
   </style>
 
 </head>
@@ -51,8 +52,7 @@
   <!-- nav bar ends here -->
   <div class="image">
     <header>
-      <h3>REGISTER HERE</h3>
-      <h6>Note:This section is only for the agricultural officer </h6>
+      <h6>Note:This form is to be filled in by the agricultural officer </h6>
     </header>
     <div class="row justify-content-center">
       <div class="col-md-6">
