--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -23,7 +23,16 @@
     }
 
     .card {
-      margin-top: 30px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+    .info{
+      font-style: italic;
+      text-align: center;
+      
+    }
+    form{
+      background-color: azure;
     }
   </style>
   <title>RegisterUF</title>
@@ -35,6 +44,10 @@
   <!-- nav bar ends here -->
   <div class="image">
     <div class="row justify-content-center">
+      <div class="info">
+        <h3>REGISTER HERE</h3>
+        <h6>Note:This form is to be filled in by the farmer one </h6>
+      </div>
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
