--- a/auth/registerAofficer.html
+++ b/auth/registerAofficer.html
@@ -1,12 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>agricultural officer</title>
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <title>agricultural officer registration</title>
+    <style>
+      .image {
+      background-image: url("/image/farmland.jpg");
+      /* The image used */
+      background-color: #cccccc;
+      /* Used if the image is unavailable */
+      /* You must set a specified height */
+      background-position: relative;
+      /* Center the image */
+      background-repeat: no-repeat;
+      /* Do not repeat the image */
+      background-size: cover;
+      /* Resize the background image to cover the entire container */
+      background-attachment: fixed;
+    }   
+    form{
+      background-color: azure;
+    }
+    </style>
 </head>
+
 <body>
-    
+    <!-- nav starts Here -->
+    <div w3-include-html="/includes/navbar.html"></div>
+    <!-- nav bar ends here -->
+    <div class="image">
+        <header>
+            <h3>REGISTER HERE</h3>
+            <h6>Note:This section is only for the agricultural officer </h6>
+        </header>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card" style="position: relative;">
+                    <div class="card-body">
+                        <form id="regform" action="#" onsubmit="return validate (event)" method="post">
+                            <div class="form-group">
+                                <label>First name:</label>
+                                <input type="text" class="form-control" name="firstname" id="fName">
+                                <small id="fNameErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Second name:</label>
+                                <input type="text" class="form-control" name="secondname" id="sName">
+                                <small id="sNameErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Date of birth:</label>
+                                <input type="date" class="form-control" name="dob" id="db">
+                                <small id="dbErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Gender:</label>
+                                <label class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="gender"
+                                        id="male"><span>Male</span>
+                                </label>
+                                <label class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="gender"
+                                        id="female"><span>Female</span>
+                                </label>
+                                <small id="gndErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Phone number:</label>
+                                <input type="text" class="form-control" name="phone number" id="pNum">
+                                <small id="pNumErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>NIN:</label>
+                                <input type="text" class="form-control" name="NIN" id="nin">
+                                <small id="ninErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Address</label>
+                                <input type="text" class="form-control" name="address" id="adr">
+                                <small id="adrErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Residence type:</label>
+                                <input type="text" class="form-control" name="residence type" id="rT">
+                                <small id="rTErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Years spent in the area:</label>
+                                <input type="number" class="form-control" name="time" id="tsa">
+                                <small id="tsaErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Date of registration:</label>
+                                <input type="date" class="form-control" name="dreg" id="dr">
+                                <small id="drErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label>Unique number:</label>
+                                <input type="number" class="form-control" name="unique number" id="uN">
+                                <small id="uNErr"></small>
+                            </div>
+                            <div class="form-group">
+                                <label for="pwd">Password:</label>
+                                <input type="password" class="form-control" id="pwd" name="password">
+                                <small id="pwdErr"></small>
+                            </div>
+                            <div class="checkbox">
+                                <label><input type="checkbox"> Remember me</label>
+                            </div>
+                            <button id="submit" class="btn btn-primary btn-block">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- footer starts here -->
+        <div w3-include-html="/includes/footer.html"></div>
+        <!-- footer ends here -->
+    </div>
+    <script src="/bootstrap/js/bootstrap.js"></script>
+    <script src="/includes/custom.js"></script>
+    <script src="/js/AofficerValidate.js"></script>
 </body>
+
 </html>
