ADDITION OF DASHBOARDS

--- a/landing pages/ufdash.html
+++ b/landing pages/ufdash.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <title>Agricultural Officer landing page</title>
+    <title>Urban Farmer Dashboard</title>
 </head>
 
 <body>
@@ -17,9 +17,8 @@
     <!-- Sidebar -->
     <div class="w3-sidebar w3-bar-block w3-border-right" id="mySidebar">
         <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-        <a href="/auth/registerFone.html" class="w3-bar-item w3-button">Register new Farmer one</a>
-        <a href="#" class="w3-bar-item w3-button"> Registered Farmer Ones</a>
-        <a href="#" class="w3-bar-item w3-button">Messages</a>
+        <a href="/products/upload.html" class="w3-bar-item w3-button">Upload Produce</a>
+        <a href="#" class="w3-bar-item w3-button">Bookings and Orders</a>
         <a href="#" class="w3-bar-item w3-button">Log out</a>
     </div>
         <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
